# project-1

./: Cargo.toml  README.md
crates/oracle-audit/src/: custody.rs  entry.rs  verifier.rs  writer.rs
crates/oracle-capability/src/: adb.rs  detector.rs  lib.rs
crates/oracle-cli/: Cargo.toml
crates/oracle-cli/src/: commands.rs  main.rs  pipeline.rs  startup.rs
crates/oracle-cli/tests/: hardening_tests.rs
crates/oracle-confidence/src/: lib.rs  model.rs  scorer.rs
crates/oracle-core/: Cargo.toml
crates/oracle-core/src/: error.rs  lib.rs  types.rs
crates/oracle-correlate/src/: anomaly.rs  events.rs  identity.rs  lib.rs
crates/oracle-discovery/: Cargo.toml
crates/oracle-discovery/src/: acquisition.rs  lib.rs  scanner.rs
crates/oracle-evidence/src/: cas.rs  integrity.rs  lib.rs  records.rs
crates/oracle-normalize/src/: conflict.rs  lib.rs
crates/oracle-oem/src/: lib.rs  plugin.rs  samsung.rs
crates/oracle-parser/src/: connectivity.rs  dhcp.rs  lib.rs  registry.rs  traits.rs  wifi_config.rs  wpa_supplicant.rs
crates/oracle-report/: Cargo.toml
crates/oracle-report/src/: generator.rs  lib.rs  pdf.rs  signing.rs  types.rs
scripts/: diagnostics.sh  install.sh  mock_validation.sh
